fix(TBD-5921/components): test plugin was not included into its feature.xml

--- a/pom.xml
+++ b/pom.xml
@@ -169,6 +169,7 @@
         <module>test/plugins/org.talend.hadoop.distribution.cdh580.test</module>
         <module>test/plugins/org.talend.hadoop.distribution.cdh580spark2.test</module>
         <module>test/plugins/org.talend.hadoop.distribution.cdh5100.test</module>
+        <module>test/plugins/org.talend.hadoop.distribution.cdh5120.test</module>
         <module>test/plugins/org.talend.hadoop.distribution.custom.test</module>
         <module>test/plugins/org.talend.hadoop.distribution.dataproc11.test</module>
         <module>test/plugins/org.talend.hadoop.distribution.emr103.test</module>
