--- a/main/plugins/org.talend.designer.components.bigdata/components/tHBaseInput/tHBaseInput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHBaseInput/tHBaseInput_messages.properties
@@ -96,8 +96,8 @@ START_ROW.NAME=Start Row
 END_ROW.NAME=End Row
 
 RETRIEVE_TIMESTAMP.NAME=Retrieve timestamps
-TIMESTAMP_SOURCE_COLUMN.NAME=from Hbase column
-TIMESTAMP_COLUMN.NAME=to Output column
+TIMESTAMP_SOURCE_COLUMN.NAME=From Hbase column:
+TIMESTAMP_COLUMN.NAME=To the schema output column:
 
 HADOOP_CUSTOM_VERSION.NAME=Hadoop version of the distribution
 HADOOP_CUSTOM_VERSION.ITEM.HADOOP_1=Hadoop 1
