feat(TDI-39607):revert the change of tNeo4jInput output relationship. Promote batch components. Add jar dependence of java driver.

--- a/main/plugins/org.talend.designer.components.bigdata/components/tNeo4jBatchOutput/tNeo4jBatchOutput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tNeo4jBatchOutput/tNeo4jBatchOutput_messages.properties
@@ -8,6 +8,9 @@ LONG_NAME=Neo4j 3.2.6 node batch importer component
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 CONNECTION_GROUP.NAME=Database
 CONNECTION.NAME=Connection
+USE_EXISTING_CONNECTION.NAME=Use an existing connection
+DATABASE_PATH.NAME=Database path
+SHUTDOWN_DB.NAME=Shutdown after job
 
 #
 # Schema group
@@ -21,4 +24,12 @@ IMPORT_ID_FIELD.NAME=Import Identifier (must be unique across the index)
 INSERT_IMPORT_ID_FIELD.NAME=Saving the identifier ?
 IMPORT_INDEX_CACHE_SIZE.NAME=Number of index element in memory (expression | ex: 10000)
 
-NB_LINE.NAME=Number of rows
+NB_LINE.NAME=NB_LINE
+
+#
+# Advanced params
+# ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+FINE_TUNING_GROUP.NAME=Neo4j configuration \n http://neo4j.com/docs/stable/configuration-settings.html
+CONFIGURATION.NAME=
+CONFIGURATION.ITEM.KEY=Parameter name (string | ex: dbms.pagecache.memory)
+CONFIGURATION.ITEM.VALUE=Parameter value (expression | ex: "2G")
