--- a/main/plugins/org.talend.designer.components.bigdata/components/tNeo4jBatchOutputRelationship/tNeo4jBatchOutputRelationship_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tNeo4jBatchOutputRelationship/tNeo4jBatchOutputRelationship_messages.properties
@@ -20,6 +20,18 @@ END_NODE_GROUP.NAME=End node of the relationship
 END_INDEX_NAME.NAME=Name of the batch index
 END_INDEX_FIELD.NAME=Field name for the batch index (must be unique across the index)
 
-SKIP_ON_ERROR.NAME=Skip on error ?
+DIE_ON_ERROR.NAME=Die on error
 
-NB_LINE.NAME=Number of rows
+NB_LINE.NAME=NB_LINE
+CONFIGURATION.NAME=
+DATABASE_PATH.NAME=Database path
+USE_EXISTING_CONNECTION.NAME=Use an existing connection
+SHUTDOWN_DB.NAME=Shutdown after job 
+
+#
+# Advanced params
+# ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+FINE_TUNING_GROUP.NAME=Neo4j configuration \n http://neo4j.com/docs/stable/configuration-settings.html
+CONFIGURATION.NAME=
+CONFIGURATION.ITEM.KEY=Parameter name (string | ex: dbms.pagecache.memory)
+CONFIGURATION.ITEM.VALUE=Parameter value (expression | ex: "2G")
