--- a/main/plugins/org.talend.designer.components.bigdata/components/tNeo4jBatchSchema/tNeo4jBatchSchema_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tNeo4jBatchSchema/tNeo4jBatchSchema_messages.properties
@@ -8,6 +8,9 @@ LONG_NAME=Neo4j 3.2.6 batch importer schema definition component
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 CONNECTION_GROUP.NAME=Database
 CONNECTION.NAME=Connection
+USE_EXISTING_CONNECTION.NAME=Use an existing connection
+DATABASE_PATH.NAME=Database path
+SHUTDOWN_DB.NAME=Shutdown after job
 
 #
 # Schema group
@@ -19,3 +22,11 @@ SCHEMA.ITEM.TYPE.ITEM.NODE_PROPERTY_UNIQUE=Node property is unique
 SCHEMA.ITEM.TYPE.ITEM.NODE_PROPERTY_INDEX=Index on node property
 SCHEMA.ITEM.LABEL=For node with Label (expression | ex : "MyLabel")
 SCHEMA.ITEM.PROPERTY=On property (expression | ex : "myProperty")
+
+#
+# Advanced params
+# ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+FINE_TUNING_GROUP.NAME=Neo4j configuration \n http://neo4j.com/docs/stable/configuration-settings.html
+CONFIGURATION.NAME=
+CONFIGURATION.ITEM.KEY=Parameter name (string | ex: dbms.pagecache.memory)
+CONFIGURATION.ITEM.VALUE=Parameter value (expression | ex: "2G")
