--- a/main/plugins/org.talend.designer.components.bigdata/components/tNeo4jRow/tNeo4jRow_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tNeo4jRow/tNeo4jRow_messages.properties
@@ -35,7 +35,7 @@ DB_VERSION.ITEM.NEO4J_1_X_X=Neo4J 1.X.X (Deprecated)
 DB_VERSION.ITEM.NEO4J_2_1_X=Neo4J 2.1.X (Deprecated)
 DB_VERSION.ITEM.NEO4J_2_2_X=Neo4J 2.2.X (Deprecated)
 DB_VERSION.ITEM.NEO4J_2_3_X=Neo4J 2.3.X (Deprecated)
-DB_VERSION.ITEM.NEO4J_3_X_X=Neo4J 3.X.X
+DB_VERSION.ITEM.NEO4J_3_2_X=Neo4J 3.2.X
 
 SET_USERNAME.NAME=set username
 USERNAME.NAME=Username
