--- a/main/plugins/org.talend.hadoop.distribution.mapr600/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.mapr600/plugin.xml
@@ -335,6 +335,12 @@
             mvn_uri="mvn:org.talend.libraries/commons-collections-3.2.2/6.2.0">
         </libraryNeeded>
 
+		<libraryNeeded
+            id="commons-math3-3.1.1.jar"
+            name="commons-math3-3.1.1.jar" mvn_uri="mvn:org.talend.libraries/commons-math3-3.1.1/6.0.0"
+            context="plugin:org.talend.libraries.apache.common">
+        </libraryNeeded>
+
        <libraryNeeded
             context="plugin:org.talend.libraries.hadoop.mapr.6.0.0"
             id="flexjson-2.1.jar"
@@ -655,6 +661,7 @@
             <library id="commons-cli-1.2.jar" />
             <library id="commons-codec-1.5.jar" />
             <library id="commons-io-2.4.jar" />
+            <library id="commons-math3-3.1.1.jar" />
             <library id="jackson-core-asl-1.9.13.jar" />
             <library id="jackson-mapper-asl-1.9.13.jar" />
             <library id="htrace-core-3.1.0-incubating.jar" />
