--- a/main/plugins/org.talend.hadoop.distribution.mapr600/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.mapr600/plugin.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.0"?>
-<plugin
->
+<plugin>
    <extension point="org.talend.core.runtime.librariesNeeded">
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.mapr.6.0.0"
@@ -428,6 +427,14 @@
 		<libraryNeeded context="plugin:org.talend.hadoop.distribution.mapr.6.0.0" id="hive-cli-2.1.1-mapr-1710.jar" name="hive-cli-2.1.1-mapr-1710.jar" mvn_uri="mvn:org.talend.libraries/hive-cli-2.1.1-mapr-1710/6.0.0"/>
 		<libraryNeeded context="plugin:org.talend.hadoop.distribution.mapr.6.0.0" id="hive-shims-common-2.1.1-mapr-1710.jar" name="hive-shims-common-2.1.1-mapr-1710.jar" mvn_uri="mvn:org.talend.libraries/hive-shims-common-2.1.1-mapr-1710/6.0.0"/>
 		<libraryNeeded context="plugin:org.talend.hadoop.distribution.mapr.6.0.0" id="hive-shims-scheduler-2.1.1-mapr-1710.jar" name="hive-shims-scheduler-2.1.1-mapr-1710.jar" mvn_uri="mvn:org.talend.libraries/hive-shims-scheduler-2.1.1-mapr-1710/6.0.0"/>
+		<libraryNeeded context="plugin:org.talend.hadoop.distribution.mapr.6.0.0" id="hive-beeline-1.2.0-mapr-1710.jar" name="hive-beeline-1.2.0-mapr-1710.jar" mvn_uri="mvn:org.talend.libraries/hive-beeline-1.2.0-mapr-1710/6.0.0"/>
+		<libraryNeeded context="plugin:org.talend.hadoop.distribution.mapr.6.0.0" id="hive-cli-1.2.0-mapr-1710.jar" name="hive-cli-1.2.0-mapr-1710.jar" mvn_uri="mvn:org.talend.libraries/hive-cli-1.2.0-mapr-1710/6.0.0"/>
+		<libraryNeeded context="plugin:org.talend.hadoop.distribution.mapr.6.0.0" id="hive-exec-1.2.0-mapr-1710.jar" name="hive-exec-1.2.0-mapr-1710.jar" mvn_uri="mvn:org.talend.libraries/hive-exec-1.2.0-mapr-1710/6.0.0"/>
+		<libraryNeeded context="plugin:org.talend.hadoop.distribution.mapr.6.0.0" id="hive-jdbc-1.2.0-mapr-1710.jar" name="hive-jdbc-1.2.0-mapr-1710.jar" mvn_uri="mvn:org.talend.libraries/hive-jdbc-1.2.0-mapr-1710/6.0.0"/>
+		<libraryNeeded context="plugin:org.talend.hadoop.distribution.mapr.6.0.0" id="hive-metastore-1.2.0-mapr-1710.jar" name="hive-metastore-1.2.0-mapr-1710.jar" mvn_uri="mvn:org.talend.libraries/hive-metastore-1.2.0-mapr-1710/6.0.0"/>
+		<libraryNeeded context="plugin:org.talend.hadoop.distribution.mapr.6.0.0" id="hive-shims-common-1.2.0-mapr-1710.jar" name="hive-shims-common-1.2.0-mapr-1710.jar" mvn_uri="mvn:org.talend.libraries/hive-shims-common-1.2.0-mapr-1710/6.0.0"/>
+		<libraryNeeded context="plugin:org.talend.hadoop.distribution.mapr.6.0.0" id="hive-shims-scheduler-1.2.0-mapr-1710.jar" name="hive-shims-scheduler-1.2.0-mapr-1710.jar" mvn_uri="mvn:org.talend.libraries/hive-shims-scheduler-1.2.0-mapr-1710/6.0.0"/>
+
 		<libraryNeeded context="plugin:org.talend.hadoop.distribution.mapr.6.0.0" id="hk2-api-2.4.0-b34.jar" name="hk2-api-2.4.0-b34.jar" mvn_uri="mvn:org.talend.libraries/hk2-api-2.4.0-b34/6.0.0"/>
 		<libraryNeeded context="plugin:org.talend.hadoop.distribution.mapr.6.0.0" id="hk2-locator-2.4.0-b34.jar" name="hk2-locator-2.4.0-b34.jar" mvn_uri="mvn:org.talend.libraries/hk2-locator-2.4.0-b34/6.0.0"/>
 		<libraryNeeded context="plugin:org.talend.hadoop.distribution.mapr.6.0.0" id="hk2-utils-2.4.0-b34.jar" name="hk2-utils-2.4.0-b34.jar" mvn_uri="mvn:org.talend.libraries/hk2-utils-2.4.0-b34/6.0.0"/>
@@ -713,13 +720,13 @@
 			<library id="datanucleus-rdbms-4.1.19.jar"/>
 			<library id="derby-10.12.1.1.jar"/>
 			<library id="eigenbase-properties-1.1.5.jar"/>
-			<library id="hive-beeline-2.1.1-mapr-1710.jar"/>
-			<library id="hive-cli-2.1.1-mapr-1710.jar"/>
-			<library id="hive-exec-2.1.1-mapr-1710.jar"/>
-			<library id="hive-jdbc-2.1.1-mapr-1710.jar"/>
-			<library id="hive-metastore-2.1.1-mapr-1710.jar"/>
-			<library id="hive-shims-common-2.1.1-mapr-1710.jar"/>
-			<library id="hive-shims-scheduler-2.1.1-mapr-1710.jar"/>
+			<library id="hive-beeline-1.2.0-mapr-1710.jar"/>
+			<library id="hive-cli-1.2.0-mapr-1710.jar"/>
+			<library id="hive-exec-1.2.0-mapr-1710.jar"/>
+			<library id="hive-jdbc-1.2.0-mapr-1710.jar"/>
+			<library id="hive-metastore-1.2.0-mapr-1710.jar"/>
+			<library id="hive-shims-common-1.2.0-mapr-1710.jar"/>
+			<library id="hive-shims-scheduler-1.2.0-mapr-1710.jar"/>
 			<library id="hk2-api-2.4.0-b34.jar"/>
 			<library id="hk2-locator-2.4.0-b34.jar"/>
 			<library id="hk2-utils-2.4.0-b34.jar"/>
