--- a/main/plugins/org.talend.designer.components.bigdata/components/tNeo4jImportTool/tNeo4jImportTool_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tNeo4jImportTool/tNeo4jImportTool_messages.properties
@@ -7,7 +7,7 @@ LONG_NAME=Neo4j 3.2.6 import-tool component
 # Component params
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 DATABASE_GROUP.NAME=Database folder
-DATABASE_PATH.NAME=Neo4j database folder \n( expression | ex: "/tmp/neo4j_graph.db")
+DATABASE_PATH.NAME=Neo4j database folder 
 
 #
 # Import files groups
