--- a/main/plugins/org.talend.hadoop.distribution.mapr600/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.mapr600/plugin.xml
@@ -765,8 +765,6 @@
 			<library id="jta-1.1.jar"/>
 			<library id="jtransforms-2.4.0.jar"/>
 			<library id="jul-to-slf4j-1.7.16.jar"/>
-			<library id="kafka_2.10-0.9.0.0-mapr-1710.jar"/>
-			<library id="kafka-clients-0.9.0.0-mapr-1710.jar"/>
 			<library id="kryo-shaded-3.0.3.jar"/>
 			<library id="leveldbjni-all-1.8.jar"/>
 			<library id="libfb303-0.9.3.jar"/>
@@ -993,6 +991,9 @@
                 id="SPARK-KAFKA-ASSEMBLY-LIB-MRREQUIRED-MAPR600"
                 name="SPARK-KAFKA-ASSEMBLY-LIB-MRREQUIRED-MAPR600">
             <library id="spark-streaming-kafka-0-9_2.11-2.1.0-mapr-1710.jar"/>
+            <library id="kafka_2.10-0.9.0.0-mapr-1710.jar"/>
+            <library id="kafka-clients-0.9.0.0-mapr-1710.jar"/>
+            <library id="metrics-core-2.2.0.jar"/>
         </libraryNeededGroup>
         
         <!-- Spark Kafka Client group MRREQUIRED -->
@@ -1001,7 +1002,7 @@
                 description="Spark Kafka client libraries for MapR 6.0.0 that are MRREQUIRED"
                 id="SPARK-KAFKA-CLIENT-LIB-MRREQUIRED-MAPR600"
                 name="SPARK-KAFKA-CLIENT-LIB-MRREQUIRED-MAPR600">
-            <!-- <library id="kafka-clients-0.9.0.0-mapr-1710.jar"/> -->
+            <library id="kafka-clients-0.9.0.0-mapr-1710.jar"/>
         </libraryNeededGroup>
         
         <!-- Spark Kafka Avro group MRREQUIRED -->
