fix(TBD-6023): missing Gson dependency

--- a/main/plugins/org.talend.hadoop.distribution.mapr600/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.mapr600/plugin.xml
@@ -754,6 +754,7 @@
 			<library id="datanucleus-rdbms-4.1.19.jar"/>
 			<library id="derby-10.12.1.1.jar"/>
 			<library id="eigenbase-properties-1.1.5.jar"/>
+			<library id="gson-2.2.4.jar"/>
 			<library id="hive-beeline-2.1.1-mapr-1710.jar"/>
 			<library id="hive-cli-2.1.1-mapr-1710.jar"/>
 			<library id="hive-exec-2.1.1-mapr-1710.jar"/>
