--- a/main/plugins/org.talend.libraries.neo4j/pom.xml
+++ b/main/plugins/org.talend.libraries.neo4j/pom.xml
@@ -32,7 +32,7 @@
 							<artifactItems>
 								<artifactItem>
 									<groupId>org.neo4j.talend</groupId>
-									<artifactId>neo4j_talend</artifactId>
+									<artifactId>neo4j-talend-component</artifactId>
 									<version>1.3-20171206</version>
 								</artifactItem>
 							</artifactItems>
