--- a/main/plugins/org.talend.hadoop.distribution.hdp260/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.hdp260/plugin.xml
@@ -301,9 +301,9 @@
         <!-- GraphFrames libraries -->
 		<libraryNeeded 
 			context="plugin:org.talend.hadoop.distribution.hdp260"
-			id="graphframes-0.3.0-spark1.6-s_2.10.jar" 
-			name="graphframes-0.3.0-spark1.6-s_2.10.jar"
-			mvn_uri="mvn:org.talend.libraries/graphframes-0.3.0-spark1.6-s_2.10/6.0.0">
+			id="graphframes-0.5.0-spark1.6-s_2.10.jar" 
+			name="graphframes-0.5.0-spark1.6-s_2.10.jar"
+			mvn_uri="mvn:org.talend.libraries/graphframes-0.5.0-spark1.6-s_2.10/6.0.0">
 		</libraryNeeded>
         <!-- ?? -->
         
@@ -854,7 +854,8 @@
         <libraryNeeded context="plugin:org.talend.hadoop.distribution.hdp260" id="zookeeper-3.4.6.2.6.0.3-8.jar" name="zookeeper-3.4.6.2.6.0.3-8.jar" mvn_uri="mvn:org.talend.libraries/zookeeper-3.4.6.2.6.0.3-8/6.4.0"/>		
         <libraryNeeded context="plugin:org.talend.hadoop.distribution.hdp260" id="spark-streaming-kafka-0-10-assembly_2.11-2.1.0.2.6.0.3-8.jar" name="spark-streaming-kafka-0-10-assembly_2.11-2.1.0.2.6.0.3-8.jar" mvn_uri="mvn:org.talend.libraries/spark-streaming-kafka-0-10-assembly_2.11-2.1.0.2.6.0.3-8/6.4.0"/>      
         <libraryNeeded context="plugin:org.talend.hadoop.distribution.hdp260" id="spark-streaming-kinesis-asl_2.11-2.1.0.2.6.0.3-8.jar" name="spark-streaming-kinesis-asl_2.11-2.1.0.2.6.0.3-8.jar" mvn_uri="mvn:org.talend.libraries/spark-streaming-kinesis-asl_2.11-2.1.0.2.6.0.3-8/6.4.0"/>      
-		
+		<libraryNeeded context="plugin:org.talend.hadoop.distribution.hdp260" id="graphframes-0.5.0-spark2.1-s_2.11.jar" name="graphframes-0.5.0-spark2.1-s_2.11.jar" mvn_uri="mvn:org.talend.libraries/graphframes-0.5.0-spark2.1-s_2.11/6.0.0">
+		</libraryNeeded>
         <!-- Groups -->
         
         <!-- HDFS group -->
@@ -1556,7 +1557,15 @@
 			description="GraphFrames libraries for HDP 2.6 that are MRREQUIRED" 
 			id="SPARK-GRAPHFRAMES-LIB-MRREQUIRED-HDP_2_6"
 			name="SPARK-GRAPHFRAMES-LIB-MRREQUIRED-HDP_2_6">
-			<library id="graphframes-0.3.0-spark1.6-s_2.10.jar" />
+			<library id="graphframes-0.5.0-spark1.6-s_2.10.jar" />
+		</libraryNeededGroup>
+        
+        <!-- Spark 2 GraphFrames group MRREQUIRED -->
+		<libraryNeededGroup
+			description="GraphFrames libraries for HDP 2.6 that are MRREQUIRED" 
+			id="SPARK2-GRAPHFRAMES-LIB-MRREQUIRED-HDP_2_6"
+			name="SPARK2-GRAPHFRAMES-LIB-MRREQUIRED-HDP_2_6">
+			<library id="graphframes-0.5.0-spark2.1-s_2.11.jar" />
 		</libraryNeededGroup>
         
         <!-- Spark Hive group MRREQUIRED -->
