--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,7 @@
         <module>main/plugins/org.talend.hadoop.distribution.emr103</module>
         <module>main/plugins/org.talend.hadoop.distribution.emr240</module>
         <module>main/plugins/org.talend.hadoop.distribution.emr240hive0131</module>
+        <module>main/plugins/org.talend.hadoop.distribution.emr400</module>
         <module>main/plugins/org.talend.hadoop.distribution.emr450</module>
         <module>main/plugins/org.talend.hadoop.distribution.emr450.jars</module>
         <module>main/plugins/org.talend.hadoop.distribution.emr500</module>
@@ -85,6 +86,7 @@
         <module>main/plugins/org.talend.hadoop.distribution.emr550.jars</module>
         <module>main/plugins/org.talend.hadoop.distribution.emr580</module>
         <module>main/plugins/org.talend.hadoop.distribution.hdinsight310</module>
+        <module>main/plugins/org.talend.hadoop.distribution.hdinsight320</module>
         <module>main/plugins/org.talend.hadoop.distribution.hdinsight340</module>
         <module>main/plugins/org.talend.hadoop.distribution.hdinsight340.jars</module>
         <module>main/plugins/org.talend.hadoop.distribution.hdinsight360</module>
@@ -94,6 +96,7 @@
         <module>main/plugins/org.talend.hadoop.distribution.hdp200</module>
         <module>main/plugins/org.talend.hadoop.distribution.hdp210</module>
         <module>main/plugins/org.talend.hadoop.distribution.hdp220</module>
+        <module>main/plugins/org.talend.hadoop.distribution.hdp230</module>
         <module>main/plugins/org.talend.hadoop.distribution.hdp240</module>
         <module>main/plugins/org.talend.hadoop.distribution.hdp240.jars</module>
         <module>main/plugins/org.talend.hadoop.distribution.hdp250</module>
@@ -106,6 +109,7 @@
         <module>main/plugins/org.talend.hadoop.distribution.mapr301</module>
         <module>main/plugins/org.talend.hadoop.distribution.mapr310</module>
         <module>main/plugins/org.talend.hadoop.distribution.mapr401</module>
+        <module>main/plugins/org.talend.hadoop.distribution.mapr410</module>
         <module>main/plugins/org.talend.hadoop.distribution.mapr500</module>
         <module>main/plugins/org.talend.hadoop.distribution.mapr510</module>
         <module>main/plugins/org.talend.hadoop.distribution.mapr510.jars</module>
@@ -113,6 +117,8 @@
         <module>main/plugins/org.talend.hadoop.distribution.mapr520.jars</module>
         <module>main/plugins/org.talend.hadoop.distribution.mapr600</module>
         <module>main/plugins/org.talend.hadoop.distribution.mapr600.jars</module>
+        <module>main/plugins/org.talend.hadoop.distribution.piv101</module>
+        <module>main/plugins/org.talend.hadoop.distribution.piv200</module>
         <module>main/plugins/org.talend.demo.bigdata.ce</module>
         <module>main/plugins/org.talend.designer.components.bigdata</module>
         <module>main/plugins/org.talend.designer.hdfsbrowse</module>
@@ -169,11 +175,13 @@
         <module>test/plugins/org.talend.hadoop.distribution.emr103.test</module>
         <module>test/plugins/org.talend.hadoop.distribution.emr240.test</module>
         <module>test/plugins/org.talend.hadoop.distribution.emr240hive0131.test</module>
+        <module>test/plugins/org.talend.hadoop.distribution.emr400.test</module>
         <module>test/plugins/org.talend.hadoop.distribution.emr450.test</module>
         <module>test/plugins/org.talend.hadoop.distribution.emr500.test</module>
         <module>test/plugins/org.talend.hadoop.distribution.emr550.test</module>
         <module>test/plugins/org.talend.hadoop.distribution.emr580.test</module>
         <module>test/plugins/org.talend.hadoop.distribution.hdinsight310.test</module>
+        <module>test/plugins/org.talend.hadoop.distribution.hdinsight320.test</module>
         <module>test/plugins/org.talend.hadoop.distribution.hdinsight340.test</module>
         <module>test/plugins/org.talend.hadoop.distribution.hdinsight360.test</module>
         <module>test/plugins/org.talend.hadoop.distribution.hdp120.test</module>
@@ -181,6 +189,7 @@
         <module>test/plugins/org.talend.hadoop.distribution.hdp200.test</module>
         <module>test/plugins/org.talend.hadoop.distribution.hdp210.test</module>
         <module>test/plugins/org.talend.hadoop.distribution.hdp220.test</module>
+        <module>test/plugins/org.talend.hadoop.distribution.hdp230.test</module>
         <module>test/plugins/org.talend.hadoop.distribution.hdp240.test</module>
         <module>test/plugins/org.talend.hadoop.distribution.hdp250.test</module>
         <module>test/plugins/org.talend.hadoop.distribution.hdp260.test</module>
@@ -190,10 +199,13 @@
         <module>test/plugins/org.talend.hadoop.distribution.mapr301.test</module>
         <module>test/plugins/org.talend.hadoop.distribution.mapr310.test</module>
         <module>test/plugins/org.talend.hadoop.distribution.mapr401.test</module>
+        <module>test/plugins/org.talend.hadoop.distribution.mapr410.test</module>
         <module>test/plugins/org.talend.hadoop.distribution.mapr500.test</module>
         <module>test/plugins/org.talend.hadoop.distribution.mapr510.test</module>
         <module>test/plugins/org.talend.hadoop.distribution.mapr520.test</module>
         <module>test/plugins/org.talend.hadoop.distribution.mapr600.test</module>
+        <module>test/plugins/org.talend.hadoop.distribution.piv101.test</module>
+        <module>test/plugins/org.talend.hadoop.distribution.piv200.test</module>
         <module>test/plugins/org.talend.hadoop.distribution.test.base</module>
         <module>test/plugins/org.talend.hadoop.distribution.test</module>
         <module>test/plugins/org.talend.oozie.scheduler.test</module>
