fix(TBD-6445): Azure Blob storage support for EMR 5.8.0

--- a/main/plugins/org.talend.hadoop.distribution.emr580/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.emr580/plugin.xml
@@ -33,6 +33,29 @@
         	id="libthrift-0.9.3.jar"
         	name="libthrift-0.9.3.jar"
         	mvn_uri="mvn:org.talend.libraries/libthrift-0.9.3/6.3.0"/>
+        	
+        <!-- Azure libraries -->
+        <libraryNeeded
+            context="plugin:org.talend.hadoop.distribution.emr580"
+            id="hadoop-azure-2.7.3.jar"
+            name="hadoop-azure-2.7.3.jar"
+            mvn_uri="mvn:org.talend.libraries/hadoop-azure-2.7.3/6.0.0">
+        </libraryNeeded>
+
+        <libraryNeeded
+            context="plugin:org.talend.hadoop.distribution.emr580"
+            id="azure-common-1.7.1.jar"
+            name="azure-common-1.7.1.jar"
+            mvn_uri="mvn:org.talend.libraries/azure-common-1.7.1/6.0.0">
+        </libraryNeeded>
+        
+        <libraryNeeded
+            context="plugin:org.talend.hadoop.distribution.cdh5100"
+            id="azure-storage-2.2.0"
+            name="azure-storage-2.2.0.jar"
+            mvn_uri="mvn:org.talend.libraries/azure-storage-2.2.0/6.0.0">
+        </libraryNeeded>
+        <!-- Azure libraries -->
 
 		<!-- Map/Reduce libraries -->
         <libraryNeeded
@@ -2262,6 +2285,16 @@
             <library id="hive-exec-1.2.1-spark2-amzn-0.jar"/>
             <library id="hive-jdbc-1.2.1-spark2-amzn-0.jar"/>
             <library id="hive-metastore-1.2.1-spark2-amzn-0.jar"/>
+        </libraryNeededGroup>
+        
+        <!-- Spark Azure group MRREQUIRED -->
+        <libraryNeededGroup
+                description="Spark Azure libraries for EMR 5.8.0 that are MRREQUIRED"
+                id="SPARK-AZURE-LIB-MRREQUIRED-EMR_5_8_0_LATEST"
+                name="SPARK-AZURE-LIB-MRREQUIRED-EMR_5_8_0_LATEST">
+                <library id="hadoop-azure-2.7.3.jar"/>
+                <library id="azure-common-1.7.1.jar"/>
+                <library id="azure-storage-2.2.0"/>
         </libraryNeededGroup>
         
         <!-- GraphFrames group MRREQUIRED -->
