fix(TBD-6474):Upgrade jackson-databind-2.2.3 to jackson-databind-2.5.4.redhat-2

--- a/main/plugins/org.talend.hadoop.distribution.hdinsight340/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.hdinsight340/plugin.xml
@@ -325,7 +325,7 @@
              <library id="spark-assembly-hdinsight340" />
              <library id="jersey-server-1.14.jar" />
              <library id="jersey-servlet-1.14.jar" />
-             <library id="jackson-databind-2.2.3.jar" />
+             <library id="jackson-databind-2.5.4.redhat-2.jar" />
              <library id="jackson-core-2.5.4.jar" />
              <library id="jackson-annotations-2.5.4.jar" />
              <library id="snappy-java-1.0.5.jar" />
