--- a/main/plugins/org.talend.hadoop.distribution.cdh550.jars/pom.xml
+++ b/main/plugins/org.talend.hadoop.distribution.cdh550.jars/pom.xml
@@ -233,7 +233,7 @@
                 </artifactItem>
                 <artifactItem>
                   <groupId>${talend.groupid}</groupId>
-                  <artifactId>jackson-databind-2.2.3</artifactId>
+                  <artifactId>jackson-databind-2.5.4.redhat-2</artifactId>
                   <version>${talend.version.610}</version>
                 </artifactItem>
                 <artifactItem>
