--- a/main/plugins/org.talend.hadoop.distribution.cdh570/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.cdh570/plugin.xml
@@ -798,7 +798,7 @@
              <library id="spark-assembly-cdh5.7.0" />
              <library id="jersey-server-1.14.jar" />
              <library id="jersey-servlet-1.14.jar" />
-             <library id="jackson-databind-2.3.1.jar" />
+             <library id="jackson-databind-2.5.4.redhat-2.jar" />
              <library id="jackson-core-2.5.4.jar" />
              <library id="jackson-annotations-2.5.4.jar" />
              <library id="snappy-java-1.0.4.1.jar"/>
