--- a/main/plugins/org.talend.hadoop.distribution.cdh5100/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.cdh5100/plugin.xml
@@ -379,9 +379,9 @@
 
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.cdh5100"
-            id="jackson-databind-2.5.4.redhat-2.jar"
-            name="jackson-databind-2.5.4.redhat-2.jar"
-            mvn_uri="mvn:org.talend.libraries/jackson-databind-2.5.4.redhat-2/6.1.0">
+            id="jackson-databind-2.5.4.redhat-2.redhat-2.jar"
+            name="jackson-databind-2.5.4.redhat-2.redhat-2.jar"
+            mvn_uri="mvn:org.talend.libraries/jackson-databind-2.5.4.redhat-2.redhat-2/6.1.0">
         </libraryNeeded>
 
         <libraryNeeded
@@ -1227,7 +1227,7 @@
              <library id="talend-spark-assembly-1.6.0-hadoop2.6.0-cdh5.10.1-with-hive-6.4.0" />
              <library id="jersey-server-1.14.jar" />
              <library id="jersey-servlet-1.14.jar" />
-             <library id="jackson-databind-2.5.4.redhat-2.jar" />
+             <library id="jackson-databind-2.5.4.redhat-2.redhat-2.jar" />
              <library id="jackson-core-2.5.4.jar" />
              <library id="jackson-annotations-2.5.4" />
              <library id="snappy-java-1.0.4.1.jar"/>
@@ -1631,7 +1631,7 @@
              <library id="navigator-sdk-model-2.0-20160624" />
              <library id="spring-core-4.0.7.RELEASE"/>
              <library id="spring-web-4.0.7.RELEASE"/>
-             <library id="jackson-databind-2.5.4.redhat-2.jar"/>
+             <library id="jackson-databind-2.5.4.redhat-2.redhat-2.jar"/>
              <library id="jackson-annotations-2.5.4"/>
              <library id="jackson-core-2.5.4.jar"/>
              <library id="commons-net-3.1"/>
@@ -1648,7 +1648,7 @@
             <library id="kite-data-core-1.0.0-cdh5.10"/>
             <library id="kite-data-mapreduce-1.0.0-cdh5.10.jar"/>
             <library id="kite-hadoop-compatibility-1.0.0-cdh5.10"/>
-            <library id="jackson-databind-2.5.4.redhat-2.jar"/>
+            <library id="jackson-databind-2.5.4.redhat-2.redhat-2.jar"/>
             <library id="jackson-core-2.5.4.jar"/>
             <library id="parquet-avro-1.5.0-cdh5.10.1"/>
         </libraryNeededGroup>
