--- a/main/plugins/org.talend.hadoop.distribution.cdh550/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.cdh550/plugin.xml
@@ -315,9 +315,9 @@
         
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.cdh550"
-            id="jackson-databind-2.5.4.redhat-2.jar"
-            name="jackson-databind-2.5.4.redhat-2.jar"
-            mvn_uri="mvn:org.talend.libraries/jackson-databind-2.5.4.redhat-2/6.1.0">
+            id="jackson-databind-2.5.4.redhat-2.redhat-2.jar"
+            name="jackson-databind-2.5.4.redhat-2.redhat-2.jar"
+            mvn_uri="mvn:org.talend.libraries/jackson-databind-2.5.4.redhat-2.redhat-2/6.1.0">
         </libraryNeeded>
         
         <libraryNeeded
@@ -800,7 +800,7 @@
              <library id="spark-assembly-cdh5.5.2" />
              <library id="jersey-server-1.14.jar" />
              <library id="jersey-servlet-1.14.jar" />
-             <library id="jackson-databind-2.5.4.redhat-2.jar" />
+             <library id="jackson-databind-2.5.4.redhat-2.redhat-2.jar" />
              <library id="jackson-core-2.5.4.jar" />
              <library id="jackson-annotations-2.5.4.jar" />
              <library id="snappy-java-1.0.4.1.jar"/>
@@ -933,7 +933,7 @@
              <library id="navigator-sdk-model-2.0-20160624" />
              <library id="spring-core-4.0.7.RELEASE"/>
              <library id="spring-web-4.0.7.RELEASE"/>
-             <library id="jackson-databind-2.5.4.redhat-2.jar"/>
+             <library id="jackson-databind-2.5.4.redhat-2.redhat-2.jar"/>
              <library id="jackson-annotations-2.5.4.jar"/>
              <library id="jackson-core-2.5.4.jar"/>
              <library id="commons-net-3.1"/>
@@ -950,7 +950,7 @@
             <library id="kite-data-core-1.0.0-cdh5.5.0.jar"/>
             <library id="kite-data-mapreduce-1.0.0-cdh5.5.0.jar"/>
             <library id="kite-hadoop-compatibility-1.0.0-cdh5.5.0.jar"/>
-            <library id="jackson-databind-2.5.4.redhat-2.jar"/>
+            <library id="jackson-databind-2.5.4.redhat-2.redhat-2.jar"/>
             <library id="jackson-core-2.5.4.jar"/>
             <library id="parquet-avro-cdh5.5.2"/>
         </libraryNeededGroup>
