--- a/main/plugins/org.talend.hadoop.distribution.hdp250.jars/pom.xml
+++ b/main/plugins/org.talend.hadoop.distribution.hdp250.jars/pom.xml
@@ -237,7 +237,7 @@
 				</artifactItem>
 				<artifactItem>
 				  <groupId>${talend.groupid}</groupId>
-				  <artifactId>jackson-databind-2.5.4.redhat-2</artifactId>
+				  <artifactId>jackson-databind-2.5.4.redhat-2.redhat-2</artifactId>
 				  <version>${talend.version.630}</version>
 				</artifactItem>
 				<artifactItem>
