fix(TBD-6505): avro dependencies in Map Reduce group

--- a/main/plugins/org.talend.hadoop.distribution.cdh5100/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.cdh5100/plugin.xml
@@ -1036,6 +1036,7 @@
              <library id="jackson-jaxrs-1.8.8.jar"/>
              <library id="jackson-xc-1.8.8.jar"/>
              <library id="jersey-client-1.9.jar"/>
+             <library id="avro-mapred-1.7.6-cdh5.10.1-hadoop2"/>
         </libraryNeededGroup>
 
         <!-- Map/Reduce parquet group -->
