--- a/main/plugins/org.talend.hadoop.distribution.cdh570/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.cdh570/plugin.xml
@@ -612,6 +612,7 @@
              <library id="jackson-jaxrs-1.8.8.jar"/>
              <library id="jackson-xc-1.8.8.jar"/>
              <library id="jersey-client-1.9.jar"/>
+             <library id="avro-mapred-cdh5.7.0"/>
         </libraryNeededGroup>
         
         <!-- Map/Reduce parquet group -->
