--- a/main/plugins/org.talend.hadoop.distribution.cdh580/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.cdh580/plugin.xml
@@ -611,6 +611,7 @@
              <library id="jackson-jaxrs-1.8.8.jar"/>
              <library id="jackson-xc-1.8.8.jar"/>
              <library id="jersey-client-1.9.jar"/>
+             <library id="avro-mapred-cdh5.8.1"/>
         </libraryNeededGroup>
         
         <!-- Map/Reduce parquet group -->
