--- a/main/plugins/org.talend.hadoop.distribution.hdp250/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.hdp250/plugin.xml
@@ -638,6 +638,7 @@
             <library id="jackson-jaxrs-1.9.13.jar"/>
             <library id="jackson-xc-1.9.13.jar"/>
             <library id="jersey-client-1.9.jar"/>
+            <library id="avro-mapred-1.8.0-hadoop2-HDP_2_5"/>
         </libraryNeededGroup>
         
         <!--Map/Reduce parquet group MRREQUIRED -->
