--- a/main/plugins/org.talend.hadoop.distribution.emr550/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.emr550/plugin.xml
@@ -378,7 +378,7 @@
             context="plugin:org.talend.hadoop.distribution.emr550"
             id="jackson-core-asl-1.9.14-TALEND.jar"
             name="jackson-core-asl-1.9.14-TALEND.jar"
-            mvn_uri="mvn:org.talend.libraries/jackson-core-asl-1.9.14-TALEND3/6.0.0"/>
+            mvn_uri="mvn:org.talend.libraries/jackson-core-asl-1.9.14-TALEND/6.0.0"/>
 
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.emr550"
