--- a/main/plugins/org.talend.hadoop.distribution.hdinsight360/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.hdinsight360/plugin.xml
@@ -94,9 +94,9 @@
         </libraryNeeded>
         <libraryNeeded
         	context="plugin:org.talend.hadoop.distribution.hdinsight360"
-        	id="jackson-core-asl-1.9.14-TALEND3"
+        	id="jackson-core-asl-1.9.14-TALEND"
         	name="jackson-core-asl-1.9.14-TALEND.jar"
-        	mvn_uri="mvn:org.talend.libraries/jackson-core-asl-1.9.14-TALEND3/6.0.0"/>
+        	mvn_uri="mvn:org.talend.libraries/jackson-core-asl-1.9.14-TALEND/6.0.0"/>
 
         <!-- Hive libraries -->
         <libraryNeeded
@@ -324,7 +324,7 @@
              <library id="commons-lang-2.6" />
              <library id="hadoop-common-2.7.3.2.6.0.2-76" />
              <library id="commons-logging-1.1.3" />
-             <library id="jackson-core-asl-1.9.14-TALEND3" />
+             <library id="jackson-core-asl-1.9.14-TALEND" />
              <library id="commons-collections-3.2.2.jar" />
              <library id="guava-14.0.1.jar" />
         </libraryNeededGroup>
@@ -395,7 +395,7 @@
             <library id="azure-storage-5.0.0.jar" />
             <library id="jackson-core-2.8.9.jar" />
             <library id="jackson-databind-2.8.9.jar" />
-        	<library id="jackson-core-asl-1.9.14-TALEND3" />
+        	<library id="jackson-core-asl-1.9.14-TALEND" />
         	<library id="commons-logging-1.1.3" />
         </libraryNeededGroup>
         
