--- a/main/plugins/org.talend.hadoop.distribution.hdp260/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.hdp260/plugin.xml
@@ -730,7 +730,7 @@
         <libraryNeeded context="plugin:org.talend.hadoop.distribution.hdp260" id="ivy-2.4.0.jar" name="ivy-2.4.0.jar" mvn_uri="mvn:org.talend.libraries/ivy-2.4.0/6.4.0"/>
         <libraryNeeded context="plugin:org.talend.hadoop.distribution.hdp260" id="jackson-annotations-2.6.7.jar" name="jackson-annotations-2.6.7.jar" mvn_uri="mvn:org.talend.libraries/jackson-annotations-2.6.7/6.4.0"/>
         <libraryNeeded context="plugin:org.talend.hadoop.distribution.hdp260" id="jackson-core-2.6.7.jar" name="jackson-core-2.6.7.jar" mvn_uri="mvn:org.talend.libraries/jackson-core-2.6.7/6.4.0"/>
-        <libraryNeeded context="plugin:org.talend.hadoop.distribution.hdp260" id="jackson-core-asl-1.9.14-TALEND.jar" name="jackson-core-asl-1.9.14-TALEND.jar" mvn_uri="mvn:org.talend.libraries/jackson-core-asl-1.9.14-TALEND3/6.4.0"/>
+        <libraryNeeded context="plugin:org.talend.hadoop.distribution.hdp260" id="jackson-core-asl-1.9.14-TALEND.jar" name="jackson-core-asl-1.9.14-TALEND.jar" mvn_uri="mvn:org.talend.libraries/jackson-core-asl-1.9.14-TALEND/6.4.0"/>
         <libraryNeeded context="plugin:org.talend.hadoop.distribution.hdp260" id="jackson-databind-2.6.7.1.jar" name="jackson-databind-2.6.7.1.jar" mvn_uri="mvn:org.talend.libraries/jackson-databind-2.6.7.1/6.4.0"/>
         <libraryNeeded context="plugin:org.talend.hadoop.distribution.hdp260" id="jackson-dataformat-cbor-2.6.7.jar" name="jackson-dataformat-cbor-2.6.7.jar" mvn_uri="mvn:org.talend.libraries/jackson-dataformat-cbor-2.6.7/6.4.0"/>
         <libraryNeeded context="plugin:org.talend.hadoop.distribution.hdp260" id="jackson-jaxrs-1.9.13.jar" name="jackson-jaxrs-1.9.13.jar" mvn_uri="mvn:org.talend.libraries/jackson-jaxrs-1.9.13/6.4.0"/>
