fix(TBD-6705) add mvn uri definition for mongo jars 64

--- a/main/plugins/org.talend.repository.nosql/plugin.xml
+++ b/main/plugins/org.talend.repository.nosql/plugin.xml
@@ -317,5 +317,26 @@
         name="spring-data-neo4j-rest-3.4.0.RELEASE.jar" 
         mvn_uri="mvn:org.talend.libraries/spring-data-neo4j-rest-3.4.0.RELEASE/6.0.0">
       </libraryNeeded>
+
+	  <libraryNeeded
+        context="Needed for MongoDB Connection"
+        id="mongo-java-driver-2.11.2.jar"
+        name="mongo-java-driver-2.11.2.jar"
+        mvn_uri="mvn:org.talend.libraries/mongo-java-driver-2.11.2/6.0.0">
+      </libraryNeeded>
+
+      <libraryNeeded
+        context="Needed for MongoDB Connection"
+        id="mongo-java-driver-2.12.2.jar"
+        name="mongo-java-driver-2.12.2.jar"
+        mvn_uri="mvn:org.talend.libraries/mongo-java-driver-2.12.2/6.0.0">
+      </libraryNeeded>
+
+      <libraryNeeded
+        context="Needed for MongoDB Connection"
+        id="mongo-java-driver-2.13.2.jar"
+        name="mongo-java-driver-2.13.2.jar"
+        mvn_uri="mvn:org.talend.libraries/mongo-java-driver-2.13.2/6.0.0">
+      </libraryNeeded>
    </extension>
 </plugin>
