--- a/main/plugins/org.talend.hadoop.distribution.cdh570/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.cdh570/plugin.xml
@@ -612,6 +612,13 @@
              <library id="jackson-jaxrs-1.9.13.jar"/>
              <library id="jackson-xc-1.9.13.jar"/>
              <library id="jersey-client-1.9.jar"/>
+        </libraryNeededGroup>
+
+        <!-- Map/Reduce avro group MRREQUIRED -->
+        <libraryNeededGroup
+                description="Map/Reduce avro libraries for CDH 5.5 that are MRREQUIRED"
+                id="MAPREDUCE-AVRO-LIB-MRREQUIRED-CDH_5_7"
+                name="MAPREDUCE-AVRO-LIB-MRREQUIRED-CDH_5_7"  >
              <library id="avro-mapred-cdh5.7.0"/>
         </libraryNeededGroup>
         
