--- a/main/plugins/org.talend.hadoop.distribution.hdp240/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.hdp240/plugin.xml
@@ -473,7 +473,14 @@
             <library id="servlet-api-2.5.jar"/>
             <library id="slf4j-api-1.7.10.jar"/>
             <library id="slf4j-log4j12-1.7.10.jar"/>
-            <library id="avro-mapred-1.7.5-hadoop2-HDP_2_4"/>
+        </libraryNeededGroup>
+
+        <!--Map/Reduce avro group MRREQUIRED -->
+        <libraryNeededGroup
+                description="Map/Reduce avro libraries for HDP 2.4 that are MRREQUIRED"
+                id="MAPREDUCE-AVRO-LIB-MRREQUIRED-HDP_2_4"
+                name="MAPREDUCE-AVRO-LIB-MRREQUIRED-HDP_2_4"  >
+             <library id="avro-mapred-1.7.5-hadoop2-HDP_2_4"/>
         </libraryNeededGroup>
         
         <!--Map/Reduce parquet group MRREQUIRED -->
