--- a/main/plugins/org.talend.hadoop.distribution.hdp250/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.hdp250/plugin.xml
@@ -638,7 +638,14 @@
             <library id="jackson-jaxrs-1.9.13.jar"/>
             <library id="jackson-xc-1.9.13.jar"/>
             <library id="jersey-client-1.9.jar"/>
-            <library id="avro-mapred-1.8.0-hadoop2-HDP_2_5"/>
+        </libraryNeededGroup>
+        
+        <!--Map/Reduce avro group MRREQUIRED -->
+        <libraryNeededGroup
+                description="Map/Reduce avro libraries for HDP 2.5 that are MRREQUIRED"
+                id="MAPREDUCE-AVRO-LIB-MRREQUIRED-HDP_2_5"
+                name="MAPREDUCE-AVRO-LIB-MRREQUIRED-HDP_2_5"  >
+             <library id="avro-mapred-1.8.0-hadoop2-HDP_2_5"/>
         </libraryNeededGroup>
         
         <!--Map/Reduce parquet group MRREQUIRED -->
