--- a/main/plugins/org.talend.hadoop.distribution.cdh5120/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.cdh5120/plugin.xml
@@ -920,6 +920,13 @@
              <library id="jackson-xc-1.9.13.jar"/>
              <library id="joda-time-2.9.3.jar"/>
              <library id="jersey-client-1.9.jar"/>
+        </libraryNeededGroup>
+
+        <!-- Map/Reduce avro group mrrequired -->
+        <libraryNeededGroup
+                description="Map/Reduce avro libraries for CDH 5.12 that are MRREQUIRED"
+                id="MAPREDUCE-AVRO-LIB-MRREQUIRED-CDH_5_12"
+                name="MAPREDUCE-AVRO-LIB-MRREQUIRED-CDH_5_12"  >
              <library id="avro-mapred-1.7.6-cdh5.12.1-hadoop2.jar"/>
         </libraryNeededGroup>
 
