--- a/main/plugins/org.talend.hadoop.distribution.cdh580/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.cdh580/plugin.xml
@@ -611,6 +611,13 @@
              <library id="jackson-jaxrs-1.9.13.jar"/>
              <library id="jackson-xc-1.9.13.jar"/>
              <library id="jersey-client-1.9.jar"/>
+        </libraryNeededGroup>
+
+        <!-- Map/Reduce avro group MRREQUIRED -->
+        <libraryNeededGroup
+                description="Map/Reduce avro libraries for CDH 5.8 that are MRREQUIRED"
+                id="MAPREDUCE-AVRO-LIB-MRREQUIRED-CDH_5_8"
+                name="MAPREDUCE-AVRO-LIB-MRREQUIRED-CDH_5_8"  >
              <library id="avro-mapred-cdh5.8.1"/>
         </libraryNeededGroup>
         
